Update visitor counter to new Clustrmaps code

--- a/index.html
+++ b/index.html
@@ -1583,12 +1583,12 @@
 <div>
   
 
-<span >
+<span class="author-highlighted">
     Aili Chen</span>, <span >
-    Chengyu Du</span>, <span class="author-highlighted">
+    Chengyu Du</span>, <span >
     Jiangjie Chen</span>, <span >
     Jinghan Xu</span>, <span >
-    Yikai Zhang</span>, <span >
+    Yikai Zhang</span>, <span class="author-highlighted">
     Siyu Yuan</span>, <span >
     Zulong Chen</span>, <span >
     Liangyue Li</span>, <span >
@@ -2425,7 +2425,7 @@ Cite
     
   <div class="col-12 col-lg-8">
     <div style="height:200px; width: 200px; text-align: center;" align=center>
- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=QQI9vHqxG1fyacUMLJyXAuRjNpLG7t4nuPZJEmLOrnc"></script>
+ <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=M5K9MHtCH4i_F26udySeCtHqqJP64V3RGI08iF51zCA&cl=ffffff&w=a"></script>
 </div>
   </div>
   
