Change visitor counter back to globe format

--- a/index.html
+++ b/index.html
@@ -2425,7 +2425,7 @@ Cite
     
   <div class="col-12 col-lg-8">
     <div style="height:200px; width: 200px; text-align: center;" align=center>
- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=M5K9MHtCH4i_F26udySeCtHqqJP64V3RGI08iF51zCA&cl=ffffff&w=a"></script>
+ <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=M5K9MHtCH4i_F26udySeCtHqqJP64V3RGI08iF51zCA&cl=ffffff&w=a"></script>
 </div>
   </div>
   
